# digital-logger-edd-python

./: .gitignore  README.md  pyproject.toml
src/digital_edd_logger/: __init__.py  interfaces.py  logger.py  utils.py
src/digital_edd_logger/drivers/: __init__.py  base.py  console.py  postgres.py  pubsub.py
